vlib/v/parser/tests/too_many_generics_err.out
vlib/v/parser/tests/too_many_generics_err.vv:1:40: error: cannot have more than 9 generic parameters
    1 | fn too_many<A, B, D, E, F, G, H, I, J, K>() {}
      |                                        ^
